--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.html
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.html
@@ -159,7 +159,7 @@
           </div>
 
           <div class="form-group">
-            <label>Descripción del Proyecto</label>
+            <label>Descripción del Proyecto(Opcional)</label>
             <textarea
               [(ngModel)]="descripcionProyecto"
               class="form-control"
