--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -240,6 +240,7 @@
             >Recursos
           </div>
           <ul *ngIf="activeSections.has('recursos')" class="section-content">
+            <!-- Temporalmente deshabilitado
             <li>
               <a [routerLink]="['/assign-resources']"
                 ><svg
@@ -267,6 +268,7 @@
                   <path d="M12 11v3" /></svg
                 >Asignar Recursos</a>
               </li>
+            -->
               <li>
                 <a [routerLink]="['/fuel']"
                 ><svg
