--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.html
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.html
@@ -93,18 +93,31 @@
           <!-- Seleccionar Maquinaria si es Operador -->
           <div *ngIf="assignment.role === 'Operador'" class="form-group">
             <label>Maquinaria</label>
-            <select
-              [(ngModel)]="assignment.machineId"
-              (change)="
-                assignment.machineName = getMachineName(assignment.machineId)
-              "
+            <input
+              type="text"
+              [(ngModel)]="assignment.machineSearchQuery"
+              (input)="filterMachinesForAssignment(assignment)"
               class="form-control"
+              placeholder="Buscar maquinaria..."
+              autocomplete="off"
+            />
+            <div
+              *ngIf="
+                assignment.filteredMachines &&
+                assignment.filteredMachines.length > 0
+              "
+              class="dropdown-list"
             >
-              <option value="">Selecciona una maquinaria</option>
-              <option *ngFor="let maq of machines" [value]="maq">
-                {{ maq }}
-              </option>
-            </select>
+              <ul>
+                <li
+                  *ngFor="let machine of assignment.filteredMachines"
+                  (click)="selectMachine(assignment, machine)"
+                  class="dropdown-item"
+                >
+                  {{ machine.name }} - {{ machine.id }}
+                </li>
+              </ul>
+            </div>
           </div>
 
           <!-- Horario de inicio y fin para cada empleado asignado -->
@@ -159,7 +172,7 @@
           </div>
 
           <div class="form-group">
-            <label>Descripción del Proyecto(Opcional)</label>
+            <label>Descripción del Proyecto (Opcional)</label>
             <textarea
               [(ngModel)]="descripcionProyecto"
               class="form-control"
@@ -228,20 +241,31 @@
               class="form-group"
             >
               <label>Maquinaria</label>
-              <select
-                [(ngModel)]="selectedAssignment.machineId"
-                (change)="
-                  selectedAssignment.machineName = getMachineName(
-                    selectedAssignment.machineId!
-                  )
-                "
+              <input
+                type="text"
+                [(ngModel)]="selectedAssignment.machineSearchQuery"
+                (input)="filterMachinesForAssignment(selectedAssignment)"
                 class="form-control"
+                placeholder="Buscar maquinaria..."
+                autocomplete="off"
+              />
+              <div
+                *ngIf="
+                  selectedAssignment.filteredMachines &&
+                  selectedAssignment.filteredMachines.length > 0
+                "
+                class="dropdown-list"
               >
-                <option value="">Selecciona una maquinaria</option>
-                <option *ngFor="let maq of machines" [value]="maq">
-                  {{ maq }}
-                </option>
-              </select>
+                <ul>
+                  <li
+                    *ngFor="let machine of selectedAssignment.filteredMachines"
+                    (click)="selectMachine(selectedAssignment, machine)"
+                    class="dropdown-item"
+                  >
+                    {{ machine.name }} - {{ machine.id }}
+                  </li>
+                </ul>
+              </div>
             </div>
 
             <div class="row">
