--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -12,6 +12,7 @@
   width: 250px;
   background-color: #f4f4f4;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
 }
 
 /* Contenido principal */
@@ -30,6 +31,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 10px;
 }
 
 /* Contenedor para los botones de acción */
@@ -81,38 +84,79 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px; /* Ajuste para que el modal esté centrado correctamente */
+  padding: 20px;
   box-sizing: border-box;
 }
 
 /* Contenido del Modal */
 .modal-content {
   background-color: white;
-  padding: 30px;
-  border-radius: 12px;
+  padding: 20px;
+  border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 60%; /* Ancho ajustado */
-  max-height: 80%; /* Limitar la altura */
+  width: 60%;
+  max-height: 80%;
   overflow-y: auto;
   position: relative;
 }
 
-/* Alineación de botón de cierre */
-.close {
+/* Modal de detalles del proyecto */
+.modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro */
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* Contenido del Modal de detalles */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  width: 100%;
+  max-height: 80%;
+  overflow-y: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  animation: modalOpen 0.3s ease-out;
+}
+
+.team-members p {
+  margin: 5px 0;
+}
+
+/* Botón de cierre del modal */
+.modal-buttons .btn {
+  margin-top: 20px;
+}
+
+/* Botón de cierre */
+.close-details {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
   color: #333;
 }
 
-.close:hover {
+.close-details:hover {
   color: #ff4c4c;
   transform: scale(1.1);
 }
 
-/* Botón */
+/* Botón de acción */
 .btn {
   background-color: #007bff;
   color: white;
@@ -135,6 +179,7 @@
   transform: translateY(-2px);
 }
 
+/* Botón guardar */
 .save-button-container {
   display: flex;
   justify-content: flex-end;
