Mejora grafico lineas y dona

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -114,6 +114,7 @@
           [series]="lineChartOptions.series"
           [chart]="lineChartOptions.chart"
           [xaxis]="lineChartOptions.xaxis"
+          [yaxis]="lineChartOptions.yaxis"
           [title]="lineChartOptions.title"
           style="width: 100%; height: 100%"
         ></apx-chart>
