--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.css
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.css
@@ -3,6 +3,25 @@
   max-width: 800px;
   margin: auto;
 }
+/* Define una altura máxima para el cuerpo del modal y habilita el scroll */
+.modal-body {
+  max-height: 700px; /* Puedes ajustar este valor según lo que necesites */
+  overflow-y: auto;
+}
+
+/* Estilos adicionales para mejorar la apariencia del scroll */
+.modal-body::-webkit-scrollbar {
+  width: 8px;
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+.modal-body::-webkit-scrollbar-thumb:hover {
+  background-color: #b3b3b3;
+}
 
 /* Estilo para la cabecera del modal */
 .modal-header {
@@ -29,14 +48,20 @@
   color: #ff4b5c;
 }
 
-/* Contenedor de las dos columnas */
+/* Contenedor principal para alternar entre una y dos columnas */
 .parent {
   display: grid;
+  gap: 20px;
 }
 
+/* Configuración de una columna cuando employeeCount es 0 */
+.parent.single-column {
+  grid-template-columns: 1fr;
+}
+
+/* Configuración de dos columnas cuando employeeCount es mayor a 0 */
 .parent.two-columns {
   grid-template-columns: 1fr 1fr;
-  gap: 20px;
 }
 
 /* Mejora de alineación en cada columna */
@@ -162,15 +187,4 @@
 
 .row .col-6 {
   flex: 1;
-}
-
-/* Alineación adicional para las columnas */
-.parent.two-columns .form-group {
-  align-items: flex-start;
-  width: 100%;
-}
-
-.parent.two-columns .div1,
-.parent.two-columns .div2 {
-  align-items: stretch;
 }
