--- a/src/app/components/calendar/calendar.component.css
+++ b/src/app/components/calendar/calendar.component.css
@@ -1,4 +1,5 @@
 /* Contenedor principal */
+
 .dashboard-container {
   display: flex;
   height: 100vh; /* Altura completa */
@@ -144,6 +145,26 @@
   white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+/* Estilo para los eventos regulares */
+.calendar-event {
+  background: linear-gradient(135deg, #007bff 0%, #66a6ff 100%);
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+  font-weight: bold;
+}
+
+/* Estilo para los proyectos */
+.project-event {
+  background: linear-gradient(135deg, #28a745 0%, #88d498 100%);
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+  font-weight: bold;
 }
 
 /* Responsivo para pantallas más pequeñas */
