--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,33 +11,32 @@
         >
           <option value="default">General</option>
           <option *ngFor="let resource of resources" [value]="resource.id">
-          {{ resource.name }}
+            {{ resource.name }}
           </option>
         </select>
       </div>
       <div class="chart-container">
         <!-- Gráfico de Pastel con ApexCharts -->
         <apx-chart
-        [series]="pieChartOptions.series"
-        [chart]="pieChartOptions.chart"
-        [labels]="pieChartOptions.labels"
-        [responsive]="pieChartOptions.responsive"
-        [legend]="pieChartOptions.legend"
-        [dataLabels]="pieChartOptions.dataLabels"
-        [fill]="pieChartOptions.fill"
-        style="width: 100%; height: 100%"
+          [series]="pieChartOptions.series"
+          [chart]="pieChartOptions.chart"
+          [labels]="pieChartOptions.labels"
+          [responsive]="pieChartOptions.responsive"
+          [legend]="pieChartOptions.legend"
+          [dataLabels]="pieChartOptions.dataLabels"
+          [fill]="pieChartOptions.fill"
+          style="width: 100%; height: 100%"
         ></apx-chart>
         <div class="center-text">
-          <p class="total-machines" *ngIf="totalAssignedMachines > 0">
-            TOTAL: 
-            <p>{{ totalAssignedMachines }}</p>
+          <p class="total-machines" *ngIf="totalAssignedMachines > 0">TOTAL:</p>
+          <p>{{ totalAssignedMachines }}</p>
         </div>
       </div>
     </div>
 
-    <!-- Proyectos en Curso -->
+    <!-- Cantidad Total de Proyectos -->
     <div class="card project-card">
-      <h3>Proyectos en Total</h3>
+      <h3>Cantidad de Proyectos</h3>
       <div class="project-info">
         <img
           src="assets/project-icon.png"
@@ -46,7 +45,7 @@
         />
         <p class="project-count">{{ projectsCount }}</p>
       </div>
-      <p class="project-description">Cantidad total de proyectos en curso.</p>
+      <p class="project-description">Cantidad total de proyectos.</p>
     </div>
 
     <!-- Proyectos Finalizados -->
@@ -65,6 +64,7 @@
       </p>
     </div>
 
+    <!-- Proyectos en Curso -->
     <div class="card project-card">
       <h3>Proyectos en Curso</h3>
       <div class="project-info">
@@ -75,7 +75,7 @@
         />
         <p class="project-count">{{ projectsInProgress }}</p>
       </div>
-      <p class="project-description">Cantidad total de proyectos en Curso.</p>
+      <p class="project-description">Cantidad total de proyectos en curso.</p>
     </div>
 
     <!-- Reporte de Eventos -->
