--- a/src/app/components/project-dashboard/project-details/project-details.component.html
+++ b/src/app/components/project-dashboard/project-details/project-details.component.html
@@ -6,64 +6,71 @@
     </button>
   </div>
 
-  <div class="form-group">
-    <label for="projectDescription">Descripción:</label>
-    <textarea
-      id="projectDescription"
-      [(ngModel)]="projectDescription"
-      placeholder="Descripción del Proyecto"
-      [readonly]="!isEditing"
-    ></textarea>
-  </div>
+  <!-- Aquí utilizamos el Observable projectDetails$ para cargar los datos -->
+  <div *ngIf="projectDetails$ | async as projectDetails">
+    <div class="form-group">
+      <label for="projectDescription">Descripción:</label>
+      <textarea
+        id="projectDescription"
+        [(ngModel)]="projectDetails.descripcion"
+        placeholder="Descripción del Proyecto"
+        [readonly]="!isEditing"
+      ></textarea>
+    </div>
 
-  <div class="form-group">
-    <label for="startDate">Fecha de Inicio:</label>
-    <input
-      type="date"
-      id="startDate"
-      [(ngModel)]="startDate"
-      [readonly]="!isEditing"
-    />
-  </div>
+    <div class="form-group">
+      <label for="startDate">Fecha de Inicio:</label>
+      <input
+        type="date"
+        id="startDate"
+        [(ngModel)]="projectDetails.fechaInicio"
+        [readonly]="!isEditing"
+      />
+    </div>
 
-  <div class="form-group">
-    <label for="endDate">Fecha de Finalización:</label>
-    <input
-      type="date"
-      id="endDate"
-      [(ngModel)]="endDate"
-      [readonly]="!isEditing"
-    />
-  </div>
+    <div class="form-group">
+      <label for="endDate">Fecha de Finalización:</label>
+      <input
+        type="date"
+        id="endDate"
+        [(ngModel)]="projectDetails.fechaFin"
+        [readonly]="!isEditing"
+      />
+    </div>
 
-  <div class="form-group">
-    <label for="status">Estado:</label>
-    <select id="status" [(ngModel)]="status" [disabled]="!isEditing">
-      <option value="En curso">En curso</option>
-      <option value="Finalizado">Finalizado</option>
-      <option value="Cancelado">Cancelado</option>
-    </select>
-  </div>
+    <div class="form-group">
+      <label for="status">Estado:</label>
+      <select
+        id="status"
+        [(ngModel)]="projectDetails.status"
+        [disabled]="!isEditing"
+      >
+        <option value="En curso">En curso</option>
+        <option value="Finalizado">Finalizado</option>
+        <option value="Cancelado">Cancelado</option>
+      </select>
+    </div>
+    <!--    <div class="form-group">
+      <h3>Asignación de Recursos</h3>
+      <table class="resource-table">
+        <thead>
+          <tr>
+            <th>Empleado</th>
+            <th>Máquina</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let pair of resourcePairs; let i = index">
+            <td>{{ pair.employee }}</td>
+            <td>{{ pair.machine }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    -->
 
-  <div class="form-group">
-    <h3>Asignación de Recursos</h3>
-    <table class="resource-table">
-      <thead>
-        <tr>
-          <th>Empleado</th>
-          <th>Máquina</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let pair of resourcePairs; let i = index">
-          <td>{{ pair.employee }}</td>
-          <td>{{ pair.machine }}</td>
-        </tr>
-      </tbody>
-    </table>
+    <button class="btn btn-primary" *ngIf="isEditing" (click)="saveDetails()">
+      Guardar Cambios
+    </button>
   </div>
-
-  <button class="btn btn-primary" *ngIf="isEditing" (click)="saveDetails()">
-    Guardar Cambios
-  </button>
 </div>
