--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -302,7 +302,7 @@
                   ></path>
                   <circle cx="9" cy="7" r="3"></circle>
                 </svg>
-                Racionamiento
+                Reporte
               </a>
             </li>
           </ul>
