--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -305,6 +305,29 @@
                 Reporte
               </a>
             </li>
+
+            <li>
+              <a [routerLink]="['/employee-schedule']">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="24"
+                  height="24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M12 20v-2M6 20v-4a4 4 0 0 1 4-4h8"></path>
+                  <path
+                    d="M17 8h1a3 3 0 0 1 3 3v4a1 1 0 0 1 -1 1h-5v4m-4 -8v4"
+                  ></path>
+                  <circle cx="9" cy="7" r="3"></circle>
+                </svg>
+                Calendario Personal
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
